@@ -32,6 +32,7 @@ setup(name='Products.ATContentTypes',
           'plone.i18n',
           'plone.memoize',
           'plone.app.blob',
+          'plone.app.event [archetypes]',
           'plone.app.folder',
           'plone.app.layout',
           'zope.component',
